--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,11 +18,11 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: pawelqs's homepage
+title: pawelqs page
 email: pawel.kus@polsl.pl
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml.
+  Welcome to my personal website! This is a place where I want to share news, ideas,
+  and software. 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  pawelqs
