--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -8,7 +8,7 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # 'bundle exec jekyll serve'. If you change this file, please restart the server process.
 #
-# If you need help with YAML syntax, here are some quick references for you: 
+# If you need help with YAML syntax, here are some quick references for you:
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 #
@@ -18,13 +18,14 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Bioinformatics & Data Science Blog!
-email: pawel.kus@polsl.pl
+title: Computational Blog!
+email: pawel.s.kus@proton.me
 description: >- # this means to ignore newlines until "baseurl:"
   Welcome to my personal website! This is a place where I want to share news, ideas,
   and software. 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: pawel_s_kus
 github_username:  pawelqs
 
 # Build settings
