minimal-mistakes as remote theme

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -10,8 +10,8 @@
 # Review documentation to determine if you should use `theme` or `remote_theme`
 # https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/#installing-the-theme
 
-theme                  : "minimal-mistakes-jekyll"
-# remote_theme           : "mmistakes/minimal-mistakes"
+# theme                  : "minimal-mistakes-jekyll"
+remote_theme: "mmistakes/minimal-mistakes@4.24.0"
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
@@ -108,7 +108,7 @@ author:
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : <b>Bioinformatician - Computational Biologist - Phd Researcher</b>
                      
-                     
+
                      Passionate about all natural sciences. Analysis of the Next Generation Sequencing data and mathematical 
                      modeling of cancer evolution.
   location         : "Warsaw, Poland"
