--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -13,9 +13,10 @@ source "https://rubygems.org"
 
 # To upgrade, run `bundle update`.
 
-gem "jekyll"
-gem "minimal-mistakes-jekyll"
-gem 'jekyll-sass-converter', '~> 2.2'
+gem "github-pages", group: :jekyll_plugins
+gem "jekyll-include-cache", group: :jekyll_plugins
+gem "webrick", "~> 1.7"
+# gem 'jekyll-sass-converter', '~> 2.2'
 
 # The following plugins are automatically loaded by the theme-gem:
 #   gem "jekyll-paginate"
