--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -3,7 +3,7 @@ main:
   # - title: "Quick-Start Guide"
   #   url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   - title: "About"
-    url: /about/
+    url: /about-me/
   - title: "Papers"
     url: /papers/
   - title: "Software"
