--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -19,8 +19,8 @@ locale                   : "en-US"
 title                    : "Home"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Computational Biology Blog"
-description              : "Computational Biology Blog"
+name                     : "Paweł Kuś Website"
+description              : "Paweł Kuś"
 url                      : "https://pawelqs.github.io/" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "pawelqs/pawelqs.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
